--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
   "token": "",
   "prefix": "!",
+  "raidersRoleId": "",
   "months": ["janvier","février","mars","avril","mai","juin","juillet","août","septembre","octobre","novembre","décembre"],
   "days": ["mardi", "mercredi", "jeudi", "vendredi", "samedi", "dimanche", "lundi"]
 }
