add tests for some commands

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "alfino.js",
   "scripts": {
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Antoine Robillard",
   "license": "ISC",
